--- a/Assignment1/src/Poker_Game/BetOptionMenu.form
+++ b/Assignment1/src/Poker_Game/BetOptionMenu.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="BetOptionsPanel1" min="-2" pref="831" max="-2" attributes="0"/>
+          <Component id="BetOptionsPanel1" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -139,6 +139,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="5. Exit Game"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExitGameButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
