--- a/Assignment1/src/Poker_Game/WelcomeMenu.form
+++ b/Assignment1/src/Poker_Game/WelcomeMenu.form
@@ -108,7 +108,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="30" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="1. Enter Game"/>
+            <Property name="text" type="java.lang.String" value="1. Play Game"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EnterGameButton1ActionPerformed"/>
@@ -121,6 +121,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="2. Show list of Users"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ShowUserListButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="UserGameLogButton1">
           <Properties>
@@ -129,6 +132,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="3. Show User Game Log"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UserGameLogButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="ExitGameButton1">
           <Properties>
