--- a/Assignment1/src/Poker_Game/AddPlayerNames.form
+++ b/Assignment1/src/Poker_Game/AddPlayerNames.form
@@ -49,10 +49,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="NameofPlayerLabel1" min="-2" pref="37" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="NameofPlayerLabel1" min="-2" pref="37" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="CancelButton1" min="-2" max="-2" attributes="0"/>
@@ -60,15 +57,12 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="PleaseEnterNameTextField1" max="32767" attributes="0"/>
-                              <Group type="102" attributes="0">
-                                  <Component id="SaveButton1" min="-2" pref="121" max="-2" attributes="0"/>
-                                  <EmptySpace min="0" pref="223" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="SaveButton1" min="-2" pref="121" max="-2" attributes="0"/>
+                              <Component id="PleaseEnterNameTextField1" min="-2" pref="340" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace pref="108" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
