Organise some UIs and readgamelog method.

--- a/Assignment1/src/Poker_Game/WelcomeMenu.form
+++ b/Assignment1/src/Poker_Game/WelcomeMenu.form
@@ -47,7 +47,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace pref="85" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="WelcomeLabel1" min="-2" pref="545" max="-2" attributes="0"/>
@@ -58,20 +58,21 @@
                           <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                          <Component id="ExitGameButton1" alignment="0" min="-2" pref="345" max="-2" attributes="0"/>
-                          <Component id="UserGameLogButton1" alignment="1" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
                               <Component id="EnterGameButton1" max="32767" attributes="0"/>
-                              <Component id="ShowUserListButton1" pref="344" max="32767" attributes="0"/>
+                              <Component id="ShowUserListButton1" alignment="1" max="32767" attributes="0"/>
+                              <Component id="UserGameLogButton1" alignment="1" pref="376" max="32767" attributes="0"/>
                           </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="ExitGameButton1" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
